--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!-- head definitions go here -->
+        <p> Hi this is my page </p>
     </head>
     <body>
         <!-- the content goes here -->
