--- a/blog.html
+++ b/blog.html
@@ -30,7 +30,7 @@
 
     <!--Update the heading with the name of your website -->
     <div>
-      <h1>Building Your Soccer Skills</h1>
+      <h1>Building Your Soccer Skills At Home</h1>
     </div>
 
     <!-- Insert an Image for Website Page -->
