--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
   <!--Update the heading with the name of your website --
   
-    <!-- Add a navigation bar-->
+  <!-- Add a navigation bar-->
     <div>
     <nav>
       <ul>
@@ -76,7 +76,7 @@
             am learning to cook and bake (it is my journey to learn to bake the
             perfect gluten free chocolate chip cookie)</li></div>
           <div class = "facts"> <li>I have been fortunate enough to travel to France, Spain, and Italy and it is my dream to go to 
-            England, Scotland and Ireland </li> </div>
+            England, Scotland and Ireland. I love to travel!</li> </div>
           <div class = "facts"> <li>I started to learn to code my freshman year of college and fell in love with it! My favorite
             project that I have made so far was when I build a program that could send information and messages 
             between two computers </li></div>
