--- a/index.html
+++ b/index.html
@@ -20,24 +20,35 @@
 
   <!--Update the heading with the name of your website --
   
-    <!-- Add a navigation bar-->
+  <!-- Add a navigation bar-->
   <div>
-    <nav>
+    <nav1>
       <ul>
         <li>
           <a href="index.html"> HOME </a>
         </li>
         <li>
-          <a href="portfolio.html"> PROJECT PORTFOLIO </a>
+          <a href="portfolio.html"> CODE PORTFOLIO </a>
         </li>
         <li>
-          <a href="blog.html"> SOCCER SKILLS BLOG </a>
+          <a href="blog.html"> BLOG </a>
         </li>
       </ul>
-    </nav>
+    </nav1>
+
+    <nav2>
+      <ul>
+        <li>
+          <a href="index.html"> INSTAGRAM </a>
+        </li>
+        <li>
+          <a href="portfolio.html"> GITHUB </a>
+        </li>
+      </ul>
+    </nav2>
   </div>
 
-  <!-- Insert an Image for Website Page -->
+  <!-- Introduction to the Website with a title and the imaging -->
   <div class="introText">
     <div>
       <h1>
@@ -53,7 +64,7 @@
     </div>
   </div>
 
-  <!--Paragraph information bio-->
+  <!--Formal introduction to my website and what I want people to gain from using it-->
   <div class="firstPart">
     <p>
       Hi Everyone! My name is Gennie, and Welcome to my Personal Website! On
@@ -63,37 +74,33 @@
     </p>
   </div>
 
-  <!-- Text for additional biography information -->
+  <!-- HTML for the facts of the Personal About Me facts that I wish to display -->
   <div class="funFacts">
     <div class="smallHeader">About Me: <br /></div>
     <div class="listFacts">
+      
       <div class="facts">
-        <li>
           Senior at the University of Puget Sound in Tacoma, Washington majoring
-          in Computer Science, with minors in Spanish and Education
-        </li>
+          in Computer Science, with minors in Spanish and Education.
       </div>
+
       <div class="facts">
-        <li>
           My passions include running, hiking, playing soccer and currently I am
           learning to be a better cook and baker. It is my goal in life to
           perfect a recipe for gluten free chocolate chip cookies.
-        </li>
       </div>
+
       <div class="facts">
-        <li>
           As an avid traveler I have been fortunate enough to travel to France,
           Spain, and Italy. Next destination for my adventures is hopefully
           Greece.
-        </li>
       </div>
+
       <div class="facts">
-        <li>
           I started to learn to code my freshman year of college and fell in
           love with it! My favorite project that I have made so far was when I
           build a program that could send information and messages between two
           computers
-        </li>
       </div>
     </div>
   </div>
